adding in contents of html more

--- a/index.html
+++ b/index.html
@@ -10,11 +10,39 @@
 
         <div class="header">
             <div>
-
+                <img>
+                <h1>Damena Jackson</h1>
+                <div></div>
             </div>
         </div>
 
-        <div class="projects"></div>
+        <div class="projects">
+            <h2>My work</h2>
+            <div class="mywork">
+                <div class="projIMG">imaginary img of project</div>
+                <div></div>
+            </div>
+            <div class="mywork">
+                <div>imaginary img of project</div>
+                <div></div>
+            </div>
+            <div class="mywork">
+                <div class="projIMG">imaginary img of project</div>
+                <div></div>
+            </div>
+            <div class="mywork">
+                <div class="projIMG">imaginary img of project</div>
+                <div></div>
+            </div>
+            <div class="mywork">
+                <div class="projIMG">imaginary img of project</div>
+                <div></div>
+            </div>
+            <div class="mywork">
+                <div class="projIMG">imaginary img of project</div>
+                <div></div>
+            </div>
+        </div>
 
         <div class="contact">
             <div class="contact-left">
