html set for the moment, on to css

--- a/index.html
+++ b/index.html
@@ -12,35 +12,45 @@
             <div>
                 <img>
                 <h1>Damena Jackson</h1>
-                <div></div>
+                <div class="aboutMe">
+                    <h2>About me</h2>
+                    <p></p>
+                    <div class="links">
+                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="projects">
             <h2>My work</h2>
-            <div class="mywork">
-                <div class="projIMG">imaginary img of project</div>
-                <div></div>
-            </div>
-            <div class="mywork">
-                <div>imaginary img of project</div>
-                <div></div>
-            </div>
-            <div class="mywork">
-                <div class="projIMG">imaginary img of project</div>
-                <div></div>
-            </div>
-            <div class="mywork">
-                <div class="projIMG">imaginary img of project</div>
-                <div></div>
-            </div>
-            <div class="mywork">
-                <div class="projIMG">imaginary img of project</div>
-                <div></div>
-            </div>
-            <div class="mywork">
-                <div class="projIMG">imaginary img of project</div>
-                <div></div>
+            <div class="gridForProj">
+                <div class="mywork">
+                    <div class="projIMG">imaginary img of project</div>
+                    <div></div>
+                </div>
+                <div class="mywork">
+                    <div>imaginary img of project</div>
+                    <div></div>
+                </div>
+                <div class="mywork">
+                    <div class="projIMG">imaginary img of project</div>
+                    <div></div>
+                </div>
+                <div class="mywork">
+                    <div class="projIMG">imaginary img of project</div>
+                    <div></div>
+                </div>
+                <div class="mywork">
+                    <div class="projIMG">imaginary img of project</div>
+                    <div></div>
+                </div>
+                <div class="mywork">
+                    <div class="projIMG">imaginary img of project</div>
+                    <div></div>
+                </div>
             </div>
         </div>
 
