additional necessary html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-tain">
@@ -14,11 +15,19 @@
                 <h1>Damena Jackson</h1>
                 <div class="aboutMe">
                     <h2>About me</h2>
-                    <p></p>
+                    <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used 
+                        in laying out print, graphic or web designs. The passage is attributed 
+                        to an unknown typesetter in the 15th century who is thought to have 
+                        scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a 
+                        type specimen book. It usually begins with:
+                        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                        tempor incididunt ut labore et dolore magna aliqua.” The purpose of lorem 
+                        ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) 
+                        that doesn't distract from the layout.</p>
                     <div class="links">
-                        <a href=""><img src="" alt=""></a>
-                        <a href=""><img src="" alt=""></a>
-                        <a href=""><img src="" alt=""></a>
+                        <a href="" aria-label="GitHub profile"><img src="github.svg" alt=""></a>
+                        <a href="" aria-label="Linkedin profile"><img src="linkedin.svg" alt=""></a>
+                        <a href="" aria-label="Twitter profile"><img src="twitter.svg" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -29,7 +38,15 @@
             <div class="gridForProj">
                 <div class="mywork">
                     <div class="projIMG">imaginary img of project</div>
-                    <div></div>
+                    <div>
+                        <div>
+                            <p>Project name</p>
+                            <div class="projName">
+                                <img src="github.svg" alt="github logo">
+                                <a href="" aria-label="open this project"> <img> </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="mywork">
                     <div>imaginary img of project</div>
