--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <div class="header">
             <div>
-                <img>
+                <img class="selfie" src="selfimg.png" alt="Damena Jackson selife">
                 <h1>Damena Jackson</h1>
                 <div class="aboutMe">
                     <h2>About me</h2>
@@ -25,9 +25,9 @@
                         ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) 
                         that doesn't distract from the layout.</p>
                     <div class="links">
-                        <a href="" aria-label="GitHub profile"><img src="github.svg" alt=""></a>
-                        <a href="" aria-label="Linkedin profile"><img src="linkedin.svg" alt=""></a>
-                        <a href="" aria-label="Twitter profile"><img src="twitter.svg" alt=""></a>
+                        <a href="" aria-label="GitHub profile"><img class="socials" src="github.svg" alt=""></a>
+                        <a href="" aria-label="Linkedin profile"><img class="socials" src="linkedin.svg" alt=""></a>
+                        <a href="" aria-label="Twitter profile"><img class="socials" src="twitter.svg" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -42,51 +42,107 @@
                         <div>
                             <p>Project name</p>
                             <div class="projName">
-                                <img src="github.svg" alt="github logo">
-                                <a href="" aria-label="open this project"> <img> </a>
+                                <img class="mini-social" src="github.svg" alt="github logo">
+                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
                             </div>
                         </div>
+                        <p>Short description of project.. nothin crazy</p>
                     </div>
                 </div>
                 <div class="mywork">
                     <div>imaginary img of project</div>
-                    <div></div>
+                    <div>
+                        <div>
+                            <p>Project name</p>
+                            <div class="projName">
+                                <img class="mini-social" src="github.svg" alt="github logo">
+                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                            </div>
+                        </div>
+                        <p>Short description of project.. nothin crazy</p>
+                    </div>
+                </div>
                 </div>
                 <div class="mywork">
                     <div class="projIMG">imaginary img of project</div>
-                    <div></div>
+                    <div>
+                        <div>
+                            <p>Project name</p>
+                            <div class="projName">
+                                <img class="mini-social"  src="github.svg" alt="github logo">
+                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                            </div>
+                        </div>
+                        <p>Short description of project.. nothin crazy</p>
+                    </div>
+                </div>
                 </div>
                 <div class="mywork">
                     <div class="projIMG">imaginary img of project</div>
-                    <div></div>
+                    <div>
+                        <div>
+                            <p>Project name</p>
+                            <div class="projName">
+                                <img class="mini-social" src="github.svg" alt="github logo">
+                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                            </div>
+                        </div>
+                        <p>Short description of project.. nothin crazy</p>
+                    </div>
+                </div>
                 </div>
                 <div class="mywork">
                     <div class="projIMG">imaginary img of project</div>
-                    <div></div>
+                    <div>
+                        <div>
+                            <p>Project name</p>
+                            <div class="projName">
+                                <img class="mini-social" src="github.svg" alt="github logo">
+                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                            </div>
+                        </div>
+                        <p>Short description of project.. nothin crazy</p>
+                    </div>
+                </div>
                 </div>
                 <div class="mywork">
                     <div class="projIMG">imaginary img of project</div>
-                    <div></div>
+                    <div>
+                        <div>
+                            <p>Project name</p>
+                            <div class="projName">
+                                <img class="mini-social" src="github.svg" alt="github logo">
+                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                            </div>
+                        </div>
+                        <p>Short description of project.. nothin crazy</p>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
 
         <div class="contact">
             <div class="contact-left">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <h2>Contact me</h2>
+                <p>Below you will find how to contact me</p>
+                <p>1234 Random St. Random town, Chicago 12345</p>
+                <div class="phone">
+                    <img class="socials" src="phone-ring-outline.svg" alt="phone number">
+                    <p>111-222-3333</p>
+                </div>
+                <div class="email">
+                    <img class="mini-social" src="email-heart-outline.svg" alt="email">
+                    <p>fake@fake-email.com</p>
+                </div>
                 <div class="links">
-                    <a href=""><img src="" alt=""></a>
-                    <a href=""><img src="" alt=""></a>
-                    <a href=""><img src="" alt=""></a>
+                    <a href="" aria-label="github profile"><img class="socials" src="github.svg" alt=""></a>
+                    <a href="" aria-label="linkedin profile"><img class="socials" src="linkedin.svg" alt=""></a>
+                    <a href="" aria-label="twotter profile"><img class="socials" src="twitter.svg" alt=""></a>
                 </div>
             </div>
             <div class="contact-right">
-                <img>
+                <img class="selfie" src="selfimg.png" alt="Damena Jackson selife">
             </div>
         </div>
     </div>
