--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
 
         <div class="contact">
             <div class="contact-left">
-                <h2>Contact me</h2>
-                <p>Below you will find how to contact me</p>
-                <p>1234 Random St. Random town, Chicago 12345</p>
+                <h2>Contact me!</h2>
+                <p>All my personals are below with the exception of my SSN</p>
+                <p>1234 Sesame St. Manhatten, New York 55555</p>
                 <div class="phone">
                     <img class="socials" src="phone-ring-outline.svg" alt="phone number">
                     <p>111-222-3333</p>
                 </div>
                 <div class="email">
-                    <img class="mini-social" src="email-heart-outline.svg" alt="email">
+                    <img class="socials" src="email-heart-outline.svg" alt="email">
                     <p>fake@fake-email.com</p>
                 </div>
                 <div class="links">
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="contact-right">
-                <img class="selfie" src="selfimg.png" alt="Damena Jackson selife">
+                <img class="selfie2" src="selfimg.png" alt="Damena Jackson selife">
             </div>
         </div>
     </div>
