i have worked on bottom and middle html + css, i had to use AI to fix an issue witwith nesting. I had extra closing divs in the wrong spot

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <div class="header">
             <div>
-                <img class="selfie" src="selfimg.png" alt="Damena Jackson selife">
+                <img class="selfie" src="selfimg.png" alt="Damena Jackson selfie">
                 <h1>Damena Jackson</h1>
                 <div class="aboutMe">
                     <h2>About me</h2>
@@ -26,7 +26,7 @@
                         that doesn't distract from the layout.</p>
                     <div class="links">
                         <a href="" aria-label="GitHub profile"><img class="socials" src="github.svg" alt=""></a>
-                        <a href="" aria-label="Linkedin profile"><img class="socials" src="linkedin.svg" alt=""></a>
+                        <a href="" aria-label="LinkedIn profile"><img class="socials" src="linkedin.svg" alt=""></a>
                         <a href="" aria-label="Twitter profile"><img class="socials" src="twitter.svg" alt=""></a>
                     </div>
                 </div>
@@ -36,88 +36,88 @@
         <div class="projects">
             <h2>My work</h2>
             <div class="gridForProj">
-                <div class="mywork">
+                <div class="mywork one">
                     <div class="projIMG">imaginary img of project</div>
                     <div>
                         <div>
                             <p>Project name</p>
                             <div class="projName">
                                 <img class="mini-social" src="github.svg" alt="github logo">
-                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                                <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
                         </div>
                         <p>Short description of project.. nothin crazy</p>
                     </div>
                 </div>
-                <div class="mywork">
+
+                <div class="mywork two">
                     <div>imaginary img of project</div>
                     <div>
                         <div>
                             <p>Project name</p>
                             <div class="projName">
                                 <img class="mini-social" src="github.svg" alt="github logo">
-                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                                <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
                         </div>
                         <p>Short description of project.. nothin crazy</p>
                     </div>
                 </div>
-                </div>
-                <div class="mywork">
-                    <div class="projIMG">imaginary img of project</div>
-                    <div>
-                        <div>
-                            <p>Project name</p>
-                            <div class="projName">
-                                <img class="mini-social"  src="github.svg" alt="github logo">
-                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
-                            </div>
-                        </div>
-                        <p>Short description of project.. nothin crazy</p>
-                    </div>
-                </div>
-                </div>
-                <div class="mywork">
+
+                <div class="mywork three">
                     <div class="projIMG">imaginary img of project</div>
                     <div>
                         <div>
                             <p>Project name</p>
                             <div class="projName">
                                 <img class="mini-social" src="github.svg" alt="github logo">
-                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                                <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
                         </div>
                         <p>Short description of project.. nothin crazy</p>
                     </div>
                 </div>
-                </div>
-                <div class="mywork">
+
+                <div class="mywork four">
                     <div class="projIMG">imaginary img of project</div>
                     <div>
                         <div>
                             <p>Project name</p>
                             <div class="projName">
                                 <img class="mini-social" src="github.svg" alt="github logo">
-                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                                <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
                         </div>
                         <p>Short description of project.. nothin crazy</p>
                     </div>
                 </div>
-                </div>
-                <div class="mywork">
+
+                <div class="mywork five">
                     <div class="projIMG">imaginary img of project</div>
                     <div>
                         <div>
                             <p>Project name</p>
                             <div class="projName">
                                 <img class="mini-social" src="github.svg" alt="github logo">
-                                <a href="" aria-label="open this project"> <img class="mini-social" src="open-in-new.svg" alt=""> </a>
+                                <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
                         </div>
                         <p>Short description of project.. nothin crazy</p>
                     </div>
                 </div>
+
+                <div class="mywork six">
+                    <div class="projIMG">imaginary img of project</div>
+                    <div>
+                        <div>
+                            <p>Project name</p>
+                            <div class="projName">
+                                <img class="mini-social" src="github.svg" alt="github logo">
+                                <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <p>Short description of project.. nothin crazy</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -138,13 +138,14 @@
                 <div class="links">
                     <a href="" aria-label="github profile"><img class="socials" src="github.svg" alt=""></a>
                     <a href="" aria-label="linkedin profile"><img class="socials" src="linkedin.svg" alt=""></a>
-                    <a href="" aria-label="twotter profile"><img class="socials" src="twitter.svg" alt=""></a>
+                    <a href="" aria-label="twitter profile"><img class="socials" src="twitter.svg" alt=""></a>
                 </div>
             </div>
             <div class="contact-right">
-                <img class="selfie2" src="selfimg.png" alt="Damena Jackson selife">
+                <img class="selfie2" src="selfimg.png" alt="Damena Jackson selfie">
             </div>
         </div>
+
     </div>
 </body>
 </html>
