working on middle section

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <h2>My work</h2>
             <div class="gridForProj">
                 <div class="mywork one">
-                    <div class="projIMG">imaginary img of project</div>
-                    <div>
-                        <div>
+                    <div class="projIMG one">imaginary img of project</div>
+                    <div class="underProjImg">
+                        <div class="nameLink">
                             <p>Project name</p>
-                            <div class="projName">
+                            <div class="projNameLinks">
                                 <img class="mini-social" src="github.svg" alt="github logo">
                                 <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
@@ -51,11 +51,11 @@
                 </div>
 
                 <div class="mywork two">
-                    <div>imaginary img of project</div>
-                    <div>
-                        <div>
+                    <div class="projIMG two">imaginary img of project</div>
+                    <div class="underProjImg">
+                        <div class="nameLink">
                             <p>Project name</p>
-                            <div class="projName">
+                            <div class="projNameLinks">
                                 <img class="mini-social" src="github.svg" alt="github logo">
                                 <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
@@ -65,11 +65,11 @@
                 </div>
 
                 <div class="mywork three">
-                    <div class="projIMG">imaginary img of project</div>
-                    <div>
-                        <div>
+                    <div class="projIMG three">imaginary img of project</div>
+                    <div class="underProjImg">
+                        <div class="nameLink">
                             <p>Project name</p>
-                            <div class="projName">
+                            <div class="projNameLinks">
                                 <img class="mini-social" src="github.svg" alt="github logo">
                                 <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
@@ -79,11 +79,11 @@
                 </div>
 
                 <div class="mywork four">
-                    <div class="projIMG">imaginary img of project</div>
-                    <div>
-                        <div>
+                    <div class="projIMG four">imaginary img of project</div>
+                    <div class="underProjImg">
+                        <div class="nameLink">
                             <p>Project name</p>
-                            <div class="projName">
+                            <div class="projNameLinks">
                                 <img class="mini-social" src="github.svg" alt="github logo">
                                 <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
@@ -93,11 +93,11 @@
                 </div>
 
                 <div class="mywork five">
-                    <div class="projIMG">imaginary img of project</div>
-                    <div>
-                        <div>
+                    <div class="projIMG five">imaginary img of project</div>
+                    <div class="underProjImg">
+                        <div class="nameLink">
                             <p>Project name</p>
-                            <div class="projName">
+                            <div class="projNameLinks">
                                 <img class="mini-social" src="github.svg" alt="github logo">
                                 <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
@@ -107,11 +107,11 @@
                 </div>
 
                 <div class="mywork six">
-                    <div class="projIMG">imaginary img of project</div>
-                    <div>
-                        <div>
+                    <div class="projIMG six">imaginary img of project</div>
+                    <div class="underProjImg">
+                        <div class="nameLink">
                             <p>Project name</p>
-                            <div class="projName">
+                            <div class="projNameLinks">
                                 <img class="mini-social" src="github.svg" alt="github logo">
                                 <a href="" aria-label="open this project"><img class="mini-social" src="open-in-new.svg" alt=""></a>
                             </div>
