still working on css almost done, have yet to work on responsiveness

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <div class="main-tain">
 
-        <div class="header">
-            <div>
-                <img class="selfie" src="selfimg.png" alt="Damena Jackson selfie">
-                <h1>Damena Jackson</h1>
+        <div class="headerContainer">
+            <div class="header">
+                <div class="photo-box">
+                    <img class="selfie" src="selfimg.png" alt="Damena Jackson selfie">
+                    <h1 class="name">Damena Jackson</h1>
+                </div>
                 <div class="aboutMe">
                     <h2>About me</h2>
                     <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used 
