--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <img class="socials" src="email-heart-outline.svg" alt="email">
                     <p>fake@fake-email.com</p>
                 </div>
-                <div class="links">
+                <div class="links-contact">
                     <a href="" aria-label="github profile"><img class="socials" src="github.svg" alt=""></a>
                     <a href="" aria-label="linkedin profile"><img class="socials" src="linkedin.svg" alt=""></a>
                     <a href="" aria-label="twitter profile"><img class="socials" src="twitter.svg" alt=""></a>
